--- a/public/assets/style.css
+++ b/public/assets/style.css
@@ -1,3 +1,15 @@
+img.background {
+  position: absolute;
+  left: 0px;
+  top: 0px;
+  z-index: -1;
+  width: 100%;
+  height: 60vh;
+  -webkit-filter: blur(7px); /* Safari 6.0 - 9.0 */
+  filter: blur(7px);
+  background-size: cover
+  }
+
 * {
   padding: 0;
   margin: 0;
